# My-MLOps-Notes

./: .pre-commit-config.yaml  README.md  main.yaml  temp.py
mlops_project/: pyproject.toml
