[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Muhammed Buyukkinaci <mubuyuk51@gmail.com>"]
readme = "README.md"
packages = [{include = "mlops_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
